Update dependencies and refactor tests in MailCatcher module
- Switch from `slf4j-simple` to `slf4j-api` and add `logback-classic`.
- Rename test class for consistency (`MailCatcherContainerIT` to `MailCatcherContainerTest`).
- Replace `getFirst()` with `get(0)` in test assertions.